--- a/ffe/app/src/main/res/layout/activity_main.xml
+++ b/ffe/app/src/main/res/layout/activity_main.xml
@@ -2,60 +2,49 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/noir"
+    android:background="@color/blanc"
     android:orientation="vertical" >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/blanc"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/config"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:onClick="setupHandler"
+            android:src="@drawable/setup" />
+
+        <TextView
+            android:id="@+id/textTitre"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="50"
+            android:gravity="center"
+            android:text="FFE compet"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/noir" />
+
+        <ImageView
+            android:id="@+id/network"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="0dp"
+            android:src="@drawable/logoffeko" />
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/concoursLayout"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="50"
-        android:orientation="vertical"
-        android:background="@layout/bord_view">
+        android:background="@color/blanc"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/config"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:onClick="setupHandler"
-                    android:src="@drawable/setup" />
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/textTitre"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="50"
-                android:gravity="center"
-                android:text="FFE compet"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/network"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginEnd="0dp"
-                    android:src="@drawable/logoffeko" />
-            </LinearLayout>
-
-
-        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -65,8 +54,8 @@
                 android:id="@+id/imagePlusConcours"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/plus"
-                android:onClick="addConcoursHandler" />
+                android:onClick="addConcoursHandler"
+                android:src="@drawable/plus" />
 
             <TextView
                 android:id="@+id/textTitreConcours"
@@ -75,7 +64,8 @@
                 android:layout_weight="50"
                 android:gravity="center"
                 android:text="Concours"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/noir" />
 
 
         </LinearLayout>
@@ -84,16 +74,14 @@
             android:id="@+id/scrollViewV"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:fillViewport="true" >
+            android:fillViewport="true">
 
             <LinearLayout
                 android:id="@+id/concoursListView"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:background="@layout/bords_concours"  >
-
-
+                android:background="@layout/bords_concours"
+                android:orientation="vertical">
 
 
             </LinearLayout>
@@ -106,8 +94,8 @@
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="50"
-        android:orientation="vertical"
-        android:background="@layout/bord_view">
+        android:background="@color/blanc"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -118,8 +106,8 @@
                 android:id="@+id/ImagePlusEpreuve"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/plus"
-                android:onClick="addEpreuveHandler"  />
+                android:onClick="addEpreuveHandler"
+                android:src="@drawable/plus" />
 
             <TextView
                 android:id="@+id/textTitreEpreuves"
@@ -128,7 +116,8 @@
                 android:layout_weight="50"
                 android:gravity="center"
                 android:text="Epreuves"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/noir" />
 
 
         </LinearLayout>
@@ -137,16 +126,14 @@
             android:id="@+id/scrollViewEpreuves"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:fillViewport="true" >
+            android:fillViewport="true">
 
             <LinearLayout
                 android:id="@+id/epreuvesListView"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:background="@layout/bords_concours"  >
-
-
+                android:background="@layout/bords_concours"
+                android:orientation="vertical">
 
 
             </LinearLayout>
