--- a/ffe/app/src/main/res/layout/concours_layout.xml
+++ b/ffe/app/src/main/res/layout/concours_layout.xml
@@ -16,8 +16,9 @@
             android:id="@+id/concoursNumView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="50"
-            android:text="201535082" />
+            android:layout_weight="25"
+            android:text="201535082"
+            android:textColor="@color/noir" />
 
         <TextView
             android:id="@+id/dateView"
@@ -25,16 +26,19 @@
             android:layout_height="wrap_content"
             android:layout_weight="50"
             android:gravity="center_horizontal"
-            android:text="--/--/--" />
-        
+            android:text="--/--/--"
+            android:textColor="@color/noir" />
+
         <TextView
             android:id="@+id/etatView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="50"
-            android:gravity="right"
+            android:layout_weight="25"
+            android:gravity="center"
             android:paddingRight="5dp"
-            android:text="etatView" />
+            android:text="etatView"
+            android:textAlignment="center"
+            android:textColor="@color/noir" />
 
     </LinearLayout>
 
@@ -48,7 +52,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="commentaire" />
+            android:text="commentaire"
+            android:textColor="@color/noir" />
 
     </LinearLayout>
     
