set backgroud color

--- a/ffe/app/src/main/res/layout/activity_setup.xml
+++ b/ffe/app/src/main/res/layout/activity_setup.xml
@@ -32,7 +32,8 @@
             android:background="@color/blanc"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
-            android:inputType="number" />
+            android:inputType="number"
+            android:textColor="@color/noir" />
 
         <TextView
             android:id="@+id/minutesTitre"
