--- a/ffe/app/src/main/res/layout/activity_add_concours.xml
+++ b/ffe/app/src/main/res/layout/activity_add_concours.xml
@@ -51,7 +51,8 @@
             android:background="@color/blanc"
             android:ems="10"
             android:gravity="center_vertical|center_horizontal"
-            android:inputType="number" />
+            android:inputType="number"
+            android:textColor="@color/noir"/>
 
     </LinearLayout>
         
@@ -69,7 +70,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/blanc"
-            android:ems="10" />
+            android:ems="10"
+            android:textColor="@color/noir" />
 
         <LinearLayout
             android:layout_width="250dp"
