--- a/ffe/app/src/main/res/layout/activity_add_epreuve.xml
+++ b/ffe/app/src/main/res/layout/activity_add_epreuve.xml
@@ -52,7 +52,8 @@
                     android:background="@color/blanc"
                     android:ems="10"
                     android:gravity="center_vertical|center_horizontal"
-                    android:inputType="number" />
+                    android:inputType="number"
+                    android:textColor="@color/noir" />
             </LinearLayout>
 
             <LinearLayout
@@ -76,7 +77,8 @@
                     android:layout_weight="1"
                     android:background="@color/blanc"
                     android:gravity="center_vertical|center_horizontal"
-                    android:inputType="number" />
+                    android:inputType="number"
+                    android:textColor="@color/noir" />
             </LinearLayout>
 
             <TextView
@@ -92,7 +94,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/blanc"
-                android:ems="10" />
+                android:ems="10"
+                android:textColor="@color/noir" />
 
             <LinearLayout
                 android:layout_width="250dp"
