--- a/ffe/app/src/main/res/layout/activity_setup.xml
+++ b/ffe/app/src/main/res/layout/activity_setup.xml
@@ -16,8 +16,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="période"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:text="@string/setup_periode"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,8 +40,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_weight="1"
-            android:text="Minutes"
+            android:layout_weight="3"
+            android:text="@string/setup_periode_unit"
             android:textAppearance="?android:attr/textAppearanceMedium" />
         
     </LinearLayout>
@@ -57,7 +57,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="50"
-            android:text="Liste des SMS"
+            android:text="@string/setup_sms_list"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <ImageView
@@ -86,14 +86,88 @@
         </LinearLayout>
     </ScrollView>
 
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:text="@string/setup_ffe_compte_titre" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/setup_ffe_compte" />
+
+        <EditText
+            android:id="@+id/compteFFE"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:background="@color/blanc"
+            android:textColor="@color/noir"
+            android:inputType="text" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="TextView" />
+
+        <EditText
+            android:id="@+id/passwordFFE"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/blanc"
+            android:textColor="@color/noir"
+            android:ems="10"
+            android:inputType="textPassword" />
+    </LinearLayout>
+
     <Button
-        android:id="@+id/modSetup"
+        android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:onClick="myClickHandler"
-        android:text="modifier" />
-    
+        android:text="@string/setup_ffe_test" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/modSetup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:onClick="myClickHandler"
+            android:text="@string/setup_save" />
+    </RelativeLayout>
+
 </LinearLayout>
 </LinearLayout>
